--- a/styles.css
+++ b/styles.css
@@ -59,10 +59,14 @@ body {
 
 path  {
     fill: none;
-    stroke-width: 2;
+    stroke-width: 3;
     stroke-miterlimit: 10;
     stroke: currentColor;
 
+  }
+
+  .bg-path path {
+    stroke-width: 2
   }
 
   .section {
